--- a/index_arquivos/0-EXEMPLO/00000/1.html
+++ b/index_arquivos/0-EXEMPLO/00000/1.html
@@ -113,9 +113,9 @@ img {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!----------------------------- _self ------ _blank ---------------->
-<FONT SIZE=+3><B>Fortaleza, 23:22 07/05/2024🔴</B></FONT><br/>
-<FONT SIZE=+2><B>Bem vindo</B></FONT><br/>
-<FONT SIZE=+1><B>🔗 SÓ LINK</B></FONT>
+<CENTER><FONT SIZE=+3><B>Fortaleza, 23:22 07/05/2024</B></FONT><br/>
+<FONT SIZE=+2><B>Bem vindo ao site <br/>
+🔗 SÓ LINKS</B></FONT><br/>
 <!------------------------------------------------------------------>
 <hr class="rounded">
 <!------------------------------------------------------------------>
