--- a/index_arquivos/SITES/1 - Copia.html
+++ b/index_arquivos/SITES/1 - Copia.html
@@ -113,8 +113,9 @@ img {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!----------------------------- _self ------ _blank ---------------->
-<CENTER><FONT SIZE=+3><B>Fortaleza, 23:22 07/05/2024🔴</B></FONT><br/>
-<FONT SIZE=+2><B>Bem vindo ao site 🔗 SÓ LINKS</B></FONT><br/>
+<CENTER><FONT SIZE=+3><B>Fortaleza, 23:22 07/05/2024</B></FONT><br/>
+<FONT SIZE=+2><B>Bem vindo ao site <br/>
+🔗 SÓ LINKS</B></FONT><br/>
 <!-----------------------RELOGIO NOVO RELÓGIO BOM------------------------>
 <u><html><head><title></title></head><body><SCRIPT LANGUAGE="JAVASCRIPT">
 <!--
