Update 1 - Copia.html

--- a/index_arquivos/SITES/1 - Copia.html
+++ b/index_arquivos/SITES/1 - Copia.html
@@ -196,6 +196,22 @@ HTML
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
+SITES DO DIA-A-DIA
+/1 - Copia.html" target="_self"><b><FONT SIZE=+2>
+SITES DO DIA-A-DIA
+</b><FONT COLOR="#FF0000"> 
+(Sites que mais uso no dia-a-dia)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+NOMEPASTA🔴
+/1 - Copia.html" target="_self"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(Sobre🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
 NOMEPASTA🔴
 /1 - Copia.html" target="_self"><b><FONT SIZE=+2>
 NOME🔴
