--- a/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
+++ b/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
@@ -115,7 +115,7 @@ img {
 <!----------------------------- _self ------ _blank ---------------->
 <CENTER><FONT SIZE=+3><B>Fortaleza, 23:22 07/05/2024</B></FONT><br/>
 <FONT SIZE=+2><B>Bem vindo ao site <br/>
-🔗 SÓ LINKS</B></FONT><br/>
+🔗 SÓ LINKS</B></FONT><br/></CENTER>
 <!------------------------------------------------------------------>
 <hr class="rounded">
 <!------------------------------------------------------------------>
