--- a/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
+++ b/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
@@ -124,19 +124,19 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://archive.org/details/@filmessantos
 " target="_blank"><b><FONT SIZE=+2>
-NOME🔴
+Archive
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Site de armazenamento)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://jbmsantos12164.github.io/PEGAR-LINK/index_arquivos/API.html
 " target="_blank"><b><FONT SIZE=+2>
-NOME🔴
+Api
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Copiar e colar)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
