Update 1 - Copia.html

--- a/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
+++ b/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
@@ -140,6 +140,38 @@ Api
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
+https://qr.ioi.tw/pt/
+" target="_blank"><b><FONT SIZE=+2>
+Qr.ioi.tw
+</b><FONT COLOR="#FF0000"> 
+(Site criador de qr code)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+https://app.bitly.com/Bl9ud4DzlFv/launchpads
+" target="_blank"><b><FONT SIZE=+2>
+Armazenamento de links
+</b><FONT COLOR="#FF0000"> 
+(hospedar)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+https://getpocket.com/pt/saves
+" target="_blank"><b><FONT SIZE=+2>
+Getpocket
+</b><FONT COLOR="#FF0000"> 
+(Guardar links)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+https://github.com/JBMSANTOS12164?tab=repositories
+" target="_blank"><b><FONT SIZE=+2>
+Meus links
+</b><FONT COLOR="#FF0000"> 
+(Github)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
 LINK🔴
 " target="_blank"><b><FONT SIZE=+2>
 NOME🔴
@@ -160,6 +192,22 @@ NOME🔴
 
 
 
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
 " target="_blank"><b><FONT SIZE=+2>
