Update 1 - Copia.html

--- a/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
+++ b/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
@@ -150,7 +150,7 @@ Qr.ioi.tw
 <li><a href="
 https://app.bitly.com/Bl9ud4DzlFv/launchpads
 " target="_blank"><b><FONT SIZE=+2>
-Armazenamento de links
+App e links
 </b><FONT COLOR="#FF0000"> 
 (hospedar)
 </FONT></FONT></a></li>
@@ -172,6 +172,38 @@ Meus links
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
+https://calendar.google.com/calendar/u/0/r/tasks?pli=1
+" target="_blank"><b><FONT SIZE=+2>
+Calendário google to-do
+</b><FONT COLOR="#FF0000"> 
+(Lista lembretes google)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+https://to-do.live.com/tasks/
+" target="_blank"><b><FONT SIZE=+2>
+Lembretes to-do
+</b><FONT COLOR="#FF0000"> 
+(Microsoft)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
 LINK🔴
 " target="_blank"><b><FONT SIZE=+2>
 NOME🔴
@@ -192,6 +224,54 @@ NOME🔴
 
 
 
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
 " target="_blank"><b><FONT SIZE=+2>
