Update 1 - Copia.html

--- a/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
+++ b/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
@@ -188,11 +188,11 @@ Lembretes to-do
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://ok.ru/feed
 " target="_blank"><b><FONT SIZE=+2>
-NOME🔴
+Armazenamento ok ru
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Armazenamento ok ru)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
