--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@ SITES
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="index_arquivos/
-PASTA🔴
+AUDIOS
 /1 - Copia.html" target="_self"><b><FONT SIZE=+2>
-NOME🔴
+AUDIOS
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Músicas e rádias)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="index_arquivos/
