--- a/index_arquivos/0-EXEMPLO - Copia/1.html
+++ b/index_arquivos/0-EXEMPLO - Copia/1.html
@@ -491,13 +491,13 @@ function topFunction() {
    left: 0;
    bottom: 0;
    width: 100%;
-   background-color: red;
+   background-color: BLUE;
    color: white;
    text-align: center;
 }
 </style></head><body>
 
-<a href="#top"><P><div class="footer"><FONT SIZE=+3><B>VOLTAR AO TOPO</B></FONT></div></P></a>
+<a href="../../index.html"><P><div class="footer"><FONT SIZE=+3><B>M E N U</B></FONT></div></P></a>
 
 </body></html> 
 <!---------------------------------------------------------------------------------->
