--- a/index_arquivos/DOWNLOADS/00000/1 - Copia.html
+++ b/index_arquivos/DOWNLOADS/00000/1 - Copia.html
@@ -123,36 +123,36 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
-<li><a href="
+<li><a href="DOWNLOAD ZIP/
 LINK🔴
-" target="_blank"><b><FONT SIZE=+2>
+.zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Downloads zip)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
-<li><a href="
+<li><a href="DOWNLOAD ZIP/
 LINK🔴
-" target="_blank"><b><FONT SIZE=+2>
+.zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Downloads zip)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
-<li><a href="
+<li><a href="DOWNLOAD ZIP/
 LINK🔴
-" target="_blank"><b><FONT SIZE=+2>
+.zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Downloads zip)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
-<li><a href="
+<li><a href="DOWNLOAD ZIP/
 LINK🔴
-" target="_blank"><b><FONT SIZE=+2>
+.zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Downloads zip)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 
@@ -160,20 +160,20 @@ NOME🔴
 
 
 
-<li><a href="
+<li><a href="DOWNLOAD ZIP/
 LINK🔴
-" target="_blank"><b><FONT SIZE=+2>
+.zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Downloads zip)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
-<li><a href="
+<li><a href="DOWNLOAD ZIP/
 LINK🔴
-" target="_blank"><b><FONT SIZE=+2>
+.zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Downloads zip)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 
