Update 1 - Copia.html

--- a/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
+++ b/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
@@ -196,11 +196,11 @@ Armazenamento ok ru
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://www.baixelivros.com.br/
 " target="_blank"><b><FONT SIZE=+2>
-NOME🔴
+Baixelivros
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Lívros pdf)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
