--- a/index_arquivos/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/DOWNLOADS/1 - Copia.html
@@ -180,11 +180,11 @@ document.write('  '+todaysDate);
 <!------------------------------------------------------------------>
 <!------------------------------MESMA ABA--------------------------->
 <li><a href="
-NOMEPASTA🔴
+Downloads de livros
 /1 - Copia.html" target="_self"><b><FONT SIZE=+2>
-NOME🔴
+Downloads de livros
 </b><FONT COLOR="#FF0000"> 
-(Sobre🔴)
+(Arquivos zip)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
