Update 1 - Copia.html

--- a/index_arquivos/DOWNLOADS/Downloads de livros/1 - Copia.html
+++ b/index_arquivos/DOWNLOADS/Downloads de livros/1 - Copia.html
@@ -124,36 +124,94 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
-LINK🔴
+Memórias Póstumas de Brás Cubas – Machado de Assis
 .zip" target="_self"><b><FONT SIZE=+2>
-NOME🔴
+Memórias Póstumas de Brás Cubas – Machado de Assis
 </b><FONT COLOR="#FF0000"> 
-(Downloads zip)
+(DOWNLOAD ZIP)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
-LINK🔴
+Memórias Póstumas de Brás Cubas – Machado de Assis
+.pdf" target="_blank"><b><FONT SIZE=+2>
+Memórias Póstumas de Brás Cubas – Machado de Assis
+</b><FONT COLOR="#FF0000"> 
+(VER EM PDF)
+</FONT></FONT></a><hr/></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<li><a href="DOWNLOAD ZIP/
+LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(Downloads zip)
+(DOWNLOAD ZIP)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
-LINK🔴
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VER EM PDF)
+</FONT></FONT></a><hr/></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<li><a href="DOWNLOAD ZIP/
+LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(Downloads zip)
+(DOWNLOAD ZIP)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
-LINK🔴
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VER EM PDF)
+</FONT></FONT></a><hr/></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<li><a href="DOWNLOAD ZIP/
+LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(Downloads zip)
+(DOWNLOAD ZIP)
 </FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="DOWNLOAD ZIP/
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VER EM PDF)
+</FONT></FONT></a><hr/></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<li><a href="DOWNLOAD ZIP/
+LINKZIP🔴
+.zip" target="_self"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(DOWNLOAD ZIP)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="DOWNLOAD ZIP/
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VER EM PDF)
+</FONT></FONT></a><hr/></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 
 
@@ -161,20 +219,22 @@ NOME🔴
 
 
 <li><a href="DOWNLOAD ZIP/
-LINK🔴
+LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(Downloads zip)
+(DOWNLOAD ZIP)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
-LINK🔴
-.zip" target="_self"><b><FONT SIZE=+2>
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
 NOME🔴
 </b><FONT COLOR="#FF0000"> 
-(Downloads zip)
-</FONT></FONT></a></li>
+(VER EM PDF)
+</FONT></FONT></a><hr/></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 
 
