--- a/index_arquivos/DOWNLOADS/00000/1 - Copia.html
+++ b/index_arquivos/DOWNLOADS/00000/1 - Copia.html
@@ -124,58 +124,69 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
-LINK🔴
+LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(Downloads zip)
-</FONT></FONT></a></li>
+</b><FONT COLOR="#FF0000"> (DOWNLOAD ZIP)</FONT></FONT></a></li><li><a href="DOWNLOAD ZIP/
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> (VER EM PDF)</FONT></FONT></a><hr/></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
-LINK🔴
+LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(Downloads zip)
-</FONT></FONT></a></li>
+</b><FONT COLOR="#FF0000"> (DOWNLOAD ZIP)</FONT></FONT></a></li><li><a href="DOWNLOAD ZIP/
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> (VER EM PDF)</FONT></FONT></a><hr/></li>
 <!------------------------------------------------------------------>
-<li><a href="DOWNLOAD ZIP/
-LINK🔴
-.zip" target="_self"><b><FONT SIZE=+2>
-NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(Downloads zip)
-</FONT></FONT></a></li>
 <!------------------------------------------------------------------>
-<li><a href="DOWNLOAD ZIP/
-LINK🔴
-.zip" target="_self"><b><FONT SIZE=+2>
-NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(Downloads zip)
-</FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 
 
 
 
 
+
+
+
 <li><a href="DOWNLOAD ZIP/
-LINK🔴
+LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(Downloads zip)
-</FONT></FONT></a></li>
+</b><FONT COLOR="#FF0000"> (DOWNLOAD ZIP)</FONT></FONT></a></li><li><a href="DOWNLOAD ZIP/
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> (VER EM PDF)</FONT></FONT></a><hr/></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
-LINK🔴
+LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(Downloads zip)
-</FONT></FONT></a></li>
+</b><FONT COLOR="#FF0000"> (DOWNLOAD ZIP)</FONT></FONT></a></li><li><a href="DOWNLOAD ZIP/
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> (VER EM PDF)</FONT></FONT></a><hr/></li>
 <!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+
+
+
+
+
+
+
+
 
 
 
