Update 1 - Copia.html

--- a/index_arquivos/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/DOWNLOADS/1 - Copia.html
@@ -188,11 +188,11 @@ Downloads de livros
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-NOMEPASTA🔴
+EXEMPLOS HTML
 /1 - Copia.html" target="_self"><b><FONT SIZE=+2>
-NOME🔴
+Downloads de exemplos "<b>HTML</b>"
 </b><FONT COLOR="#FF0000"> 
-(Sobre🔴)
+(Exemplos de códigos html)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
