Update 1 - Copia.html

--- a/index_arquivos/DOWNLOADS/Downloads de livros/1 - Copia.html
+++ b/index_arquivos/DOWNLOADS/Downloads de livros/1 - Copia.html
@@ -130,7 +130,6 @@ Memórias Póstumas de Brás Cubas – Machado de Assis
 </b><FONT COLOR="#FF0000"> 
 (DOWNLOAD ZIP)
 </FONT></FONT></a></li>
-<!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
 Memórias Póstumas de Brás Cubas – Machado de Assis
 .pdf" target="_blank"><b><FONT SIZE=+2>
@@ -142,17 +141,16 @@ Memórias Póstumas de Brás Cubas – Machado de Assis
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
-LINKZIP🔴
+Arte Poética – Aristóteles
 .zip" target="_self"><b><FONT SIZE=+2>
-NOME🔴
+Arte Poética – Aristóteles
 </b><FONT COLOR="#FF0000"> 
 (DOWNLOAD ZIP)
 </FONT></FONT></a></li>
-<!------------------------------------------------------------------>
 <li><a href="DOWNLOAD ZIP/
-LINKPDF🔴
+Arte Poética – Aristóteles
 .pdf" target="_blank"><b><FONT SIZE=+2>
-NOME🔴
+Arte Poética – Aristóteles
 </b><FONT COLOR="#FF0000"> 
 (VER EM PDF)
 </FONT></FONT></a><hr/></li>
@@ -163,17 +161,11 @@ NOME🔴
 LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(DOWNLOAD ZIP)
-</FONT></FONT></a></li>
-<!------------------------------------------------------------------>
-<li><a href="DOWNLOAD ZIP/
+</b><FONT COLOR="#FF0000"> (DOWNLOAD ZIP)</FONT></FONT></a></li><li><a href="DOWNLOAD ZIP/
 LINKPDF🔴
 .pdf" target="_blank"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(VER EM PDF)
-</FONT></FONT></a><hr/></li>
+</b><FONT COLOR="#FF0000"> (VER EM PDF)</FONT></FONT></a><hr/></li>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
@@ -181,17 +173,11 @@ NOME🔴
 LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(DOWNLOAD ZIP)
-</FONT></FONT></a></li>
-<!------------------------------------------------------------------>
-<li><a href="DOWNLOAD ZIP/
+</b><FONT COLOR="#FF0000"> (DOWNLOAD ZIP)</FONT></FONT></a></li><li><a href="DOWNLOAD ZIP/
 LINKPDF🔴
 .pdf" target="_blank"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(VER EM PDF)
-</FONT></FONT></a><hr/></li>
+</b><FONT COLOR="#FF0000"> (VER EM PDF)</FONT></FONT></a><hr/></li>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
@@ -199,20 +185,31 @@ NOME🔴
 LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(DOWNLOAD ZIP)
-</FONT></FONT></a></li>
-<!------------------------------------------------------------------>
-<li><a href="DOWNLOAD ZIP/
+</b><FONT COLOR="#FF0000"> (DOWNLOAD ZIP)</FONT></FONT></a></li><li><a href="DOWNLOAD ZIP/
 LINKPDF🔴
 .pdf" target="_blank"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(VER EM PDF)
-</FONT></FONT></a><hr/></li>
+</b><FONT COLOR="#FF0000"> (VER EM PDF)</FONT></FONT></a><hr/></li>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
+<li><a href="DOWNLOAD ZIP/
+LINKZIP🔴
+.zip" target="_self"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> (DOWNLOAD ZIP)</FONT></FONT></a></li><li><a href="DOWNLOAD ZIP/
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> (VER EM PDF)</FONT></FONT></a><hr/></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+
+
+
+
+
 
 
 
@@ -222,20 +219,31 @@ NOME🔴
 LINKZIP🔴
 .zip" target="_self"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(DOWNLOAD ZIP)
-</FONT></FONT></a></li>
-<!------------------------------------------------------------------>
-<li><a href="DOWNLOAD ZIP/
+</b><FONT COLOR="#FF0000"> (DOWNLOAD ZIP)</FONT></FONT></a></li><li><a href="DOWNLOAD ZIP/
 LINKPDF🔴
 .pdf" target="_blank"><b><FONT SIZE=+2>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(VER EM PDF)
-</FONT></FONT></a><hr/></li>
+</b><FONT COLOR="#FF0000"> (VER EM PDF)</FONT></FONT></a><hr/></li>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
+<li><a href="DOWNLOAD ZIP/
+LINKZIP🔴
+.zip" target="_self"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> (DOWNLOAD ZIP)</FONT></FONT></a></li><li><a href="DOWNLOAD ZIP/
+LINKPDF🔴
+.pdf" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> (VER EM PDF)</FONT></FONT></a><hr/></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+
+
+
+
+
 
 
 
