Update 1 - Copia.html

--- a/index_arquivos/SITES/PORNO/1 - Copia.html
+++ b/index_arquivos/SITES/PORNO/1 - Copia.html
@@ -140,11 +140,11 @@ Sextubefun
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://pt.stripchat.com/
 " target="_blank"><b><FONT SIZE=+2>
-NOME🔴
+Pt.stripchat
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Bate papo on-line)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
