Update 1 - Copia.html

--- a/index_arquivos/SITES/PORNO/1 - Copia.html
+++ b/index_arquivos/SITES/PORNO/1 - Copia.html
@@ -148,6 +148,22 @@ Pt.stripchat
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
+https://www.sambaporno.com/
+" target="_blank"><b><FONT SIZE=+2>
+Sambaporno
+</b><FONT COLOR="#FF0000"> 
+(Site porno)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+https://www.xvideos.com/tags
+" target="_blank"><b><FONT SIZE=+2>
+Xvídeos
+</b><FONT COLOR="#FF0000"> 
+(Site porno)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
 LINK🔴
 " target="_blank"><b><FONT SIZE=+2>
 NOME🔴
