Update 1 - Copia.html

--- a/index_arquivos/SITES/PORNO/1 - Copia.html
+++ b/index_arquivos/SITES/PORNO/1 - Copia.html
@@ -164,6 +164,22 @@ Xvídeos
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
+https://br.xhamster.com/
+" target="_blank"><b><FONT SIZE=+2>
+Xhamster
+</b><FONT COLOR="#FF0000"> 
+(Site porno)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+https://www.google.com/search?client=firefox-b-d&q=CUTE+TEENS+PICTURE+PORNO
+" target="_blank"><b><FONT SIZE=+2>
+CUTE TEENS PICTURE PORNO
+</b><FONT COLOR="#FF0000"> 
+(Site de fotos porno)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
 LINK🔴
 " target="_blank"><b><FONT SIZE=+2>
 NOME🔴
