Update 1 - Copia.html

--- a/index_arquivos/SITES/PORNO/1 - Copia.html
+++ b/index_arquivos/SITES/PORNO/1 - Copia.html
@@ -144,7 +144,7 @@ https://pt.stripchat.com/
 " target="_blank"><b><FONT SIZE=+2>
 Pt.stripchat
 </b><FONT COLOR="#FF0000"> 
-(Bate papo on-line)
+(Sala de bate-papo on-line)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
