Update 1 - Copia.html

--- a/index_arquivos/SITES/PORNO/1 - Copia.html
+++ b/index_arquivos/SITES/PORNO/1 - Copia.html
@@ -180,6 +180,62 @@ CUTE TEENS PICTURE PORNO
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
+https://www.tubev.sex/categories?hl=pt
+" target="_blank"><b><FONT SIZE=+2>
+Lista de Categorias Pornô
+</b><FONT COLOR="#FF0000"> 
+(Lista de site porno)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+https://theporndude.com/pt/top-latin-porn-tube-sites
+" target="_blank"><b><FONT SIZE=+2>
+Theporndude
+</b><FONT COLOR="#FF0000"> 
+(Lista de site porno)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+https://pt.pornhub.com/video/search?search=best+porno+list
+" target="_blank"><b><FONT SIZE=+2>
+Pt.pornhub
+</b><FONT COLOR="#FF0000"> 
+(Lista de site porno)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+https://theporndude.com/pt/top-porn-tube-sites
+" target="_blank"><b><FONT SIZE=+2>
+Theporndude
+</b><FONT COLOR="#FF0000"> 
+(Lista de site porno)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
 LINK🔴
 " target="_blank"><b><FONT SIZE=+2>
 NOME🔴
@@ -208,6 +264,22 @@ NOME🔴
 
 
 
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b><FONT SIZE=+2>
+NOME🔴
+</b><FONT COLOR="#FF0000"> 
+(VERMELHO🔴)
+</FONT></FONT></a></li>
+<!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
 " target="_blank"><b><FONT SIZE=+2>
