Update 1 - Copia.html

--- a/index_arquivos/SITES/PORNO/1 - Copia.html
+++ b/index_arquivos/SITES/PORNO/1 - Copia.html
@@ -212,11 +212,11 @@ Theporndude
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://www.nudepussypics.com/shaved-teen-pussy/
 " target="_blank"><b><FONT SIZE=+2>
-NOME🔴
+Nudepussypics
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Site de fotos porno)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
