Update 1 - Copia.html

--- a/index_arquivos/AUDIOS/1 - Copia.html
+++ b/index_arquivos/AUDIOS/1 - Copia.html
@@ -187,12 +187,10 @@ COLETÂNEAS
 (COLETÂNEAS FS)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
-<li><a href="
-NOMEPASTA🔴
-/1 - Copia.html" target="_self"><b><FONT SIZE=+2>
-NOME🔴
+<li><a href="DRIVES MÚSICAS.html" target="_self"><b><FONT SIZE=+2>
+DRIVES MÚSICAS
 </b><FONT COLOR="#FF0000"> 
-(Sobre🔴)
+(Todas coletâneas e músicas <B>DRIVE</B>)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
