--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@ DOWNLOADS
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="index_arquivos/
-PASTA🔴
+MEUS DRIVES
 /1 - Copia.html" target="_self"><b><FONT SIZE=+2>
-NOME🔴
+MEUS DRIVES
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Links drive)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="index_arquivos/
