--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@ MEUS DRIVES
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="index_arquivos/
-PASTA🔴
+FILMES EM GERAL
 /1 - Copia.html" target="_self"><b><FONT SIZE=+2>
-NOME🔴
+FILMES EM GERAL
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(FILMES EM GERAL)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="index_arquivos/
