Update 1 - Copia.html

--- a/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
+++ b/index_arquivos/SITES/SITES DO DIA-A-DIA/1 - Copia.html
@@ -204,11 +204,11 @@ Baixelivros
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://www.instapaper.com/u
 " target="_blank"><b><FONT SIZE=+2>
-NOME🔴
+Instapaper
 </b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
+(Hospeda link)
 </FONT></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
